--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,36 +1,131 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
+}
+
 body {
+  height: 100vh;
+  background-color: #1d2630;
   font-family: Arial;
   font-size: 120%;
 }
 
-a {
-  color: #563d7c;
-  text-decoration: none;
-  transition: color 0.1s;
-}
-
-a:hover {
-  color: #8570a5;
+.start-screen,
+.score-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
-  display: inline-block;
-  margin: 5px;
+  border: none;
+  outline: none;
   cursor: pointer;
-  font-size: 100%;
-  background-color: #563d7c;
-  border-radius: 5px;
-  padding: 2px 10px;
-  color: white;
-  border: 0;
-  transition: background-color 0.1s;
 }
 
-button:hover {
-  background-color: #8570a5;
+#start-button,
+#restart {
+  font-size: 1.33em;
+  padding: 0.5em 1.8em;
+  border-radius: 0.2em;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
 }
 
-.choices button {
+#restart {
+  margin-top: 0.9em;
+}
+
+#display-container {
+  background-color: #f5f5f5;
+  padding: 3.1em 1.8em;
+  width: 80%;
+  max-width: 37.5em;
+  margin: 0 auto;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 0.6em;
+}
+
+.header {
+  margin-bottom: 1.8em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 0, 6em;
+  border-bottom: 0.1em solid #c0bfd2;
+}
+
+.timer-div {
+  background-color: #e1f5fe;
+  width: 7.5em;
+  border-radius: 1.8em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.7em 1.8em;
+}
+
+.question {
+  margin-bottom: 1.25em;
+  font-weight: 600;
+}
+
+.options-div {
+  font-size: 0.9em;
+  width: 100%;
+  padding: 1em;
+  margin: 0.3em 0;
+  text-align: left;
+  outline: none;
+  background: transparent;
+  border: 1px solid #c0bfd2;
+  border-radius: 0.3em;
+}
+
+.options-div:disabled {
+  color: #000;
+  cursor: not-allowed;
+}
+
+#next-button {
+  font-size: 1em;
+  margin-top: 1.5em;
+  background-color: #da7b93;
+  color: #fff;
+  padding: 0.7em 1.8em;
+  border-radius: o.3em;
+  float: right;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.3);
+  transition: ease-in-out color 0.25s;
+}
+
+.hide {
+  display: none;
+}
+
+.incorrect {
+  background-color: #ffdde0;
+  color: #d32f2f;
+  border-color: #d32f2f;
+}
+
+
+
+
+#next-button:hover {
+  background-color: #376e6f;
+}
+
+/* .choices button {
   display: block;
 }
 
@@ -85,4 +180,4 @@ li:nth-child(odd) {
   position: absolute;
   top: 10px;
   right: 10px;
-}
+} */
