--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,12 +8,9 @@
 body {
   height: 100vh;
   background-color: #1d2630;
-  font-family: Arial;
-  font-size: 120%;
 }
 
-.start-screen,
-.score-container {
+.start-screen, .score-container {
   position: absolute;
   top: 0;
   width: 100%;
@@ -118,7 +115,16 @@ button {
   border-color: #d32f2f;
 }
 
+.incorrect {
+  background-color: #e7f6d5;
+  color: #689f38;
+  border-color: #689f38;
+}
 
+#user-score {
+  font-size: 1.5em;
+  color: #fff;
+}
 
 
 #next-button:hover {
