--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,7 +76,7 @@ button {
   font-weight: 600;
 }
 
-.options-div {
+.option-div {
   font-size: 0.9em;
   width: 100%;
   padding: 1em;
@@ -88,7 +88,7 @@ button {
   border-radius: 0.3em;
 }
 
-.options-div:disabled {
+.option-div:disabled {
   color: #000;
   cursor: not-allowed;
 }
@@ -115,7 +115,7 @@ button {
   border-color: #d32f2f;
 }
 
-.incorrect {
+.correct {
   background-color: #e7f6d5;
   color: #689f38;
   border-color: #689f38;
@@ -127,9 +127,9 @@ button {
 }
 
 
-#next-button:hover {
+/* #next-button:hover {
   background-color: #376e6f;
-}
+} */
 
 /* .choices button {
   display: block;
